# Tez

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.json  docker-compose.yml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
include/: file_server.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  thread_pool.hpp
launch-materials/: LAUNCH-CHECKLIST.md  README.md  hackernews-submission.md  launch-blog-post.md  reddit-posts.md
metrics/: 2025-10-23_22-22-12_first_async_test.txt  2025-10-23_22-34-14_logging_middleware.txt  Sat Oct 25 15:56:45 IST 2025_cached_response.txt  static_file_caching_Sat Oct 25 16:18:58 IST 2025.txt
src/: file_server.cpp  main.cpp  middleware.cpp  request.cpp  router.cpp  thread_pool.cpp
tests/: test_file_server.cpp  test_middleware.cpp  test_response.cpp  test_router.cpp
